<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starfield"
    android:orientation="vertical"
    tools:context=".StartActivity" >

    <ImageView
        android:id="@+id/imGameLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="0dp"
        android:contentDescription="@string/desc_game_logo"
        android:src="@drawable/nim_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="top" >

        <TextView
            android:id="@+id/txtDifficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/difficulty_level"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnDifficulty"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:entries="@array/difficulty" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="top" >

        <TextView
            android:id="@+id/txtFirstPlayer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/first_move"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spnFirstPlayer"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:entries="@array/firstmove" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:gravity="top" >

        <TextView
            android:id="@+id/txtMisere"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/chkMisere"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:text="@string/misere" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/start_game" />

</LinearLayout>